<resources>
    <string name="app_name">KIT Event Check-in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="stt">STT</string>
    <string name="id">id</string>
    <string name="student_code">Mã sinh viên</string>
    <string name="kit_event_qr_scanner">KIT EVENT QR SCANNER</string>
    <string name="settings">Settings</string>
    <string name="export">Export Attendee List</string>
    <string name="internet_connection_loss_warning">Cannot connect to database! Please check the internet connection!</string>
    <string name="firebase_url">Firebase URL</string>
    <string name="url">url</string>
    <string name="qr_code_parameters">QR code parameters</string>
    <string name="required">Required</string>
    <string name="name">Name</string>
    <string name="new_qr_param">New QR Param</string>
    <string name="success">Success!</string>
    <string name="not_a_valid_attendee">Not a valid attendee! Please Check the information!</string>
    <string name="manual_checkin">Manual Checkin</string>
    <string name="checkin_history">Checkin History</string>
    <string name="valid_attendee">Valid Attendee!</string>
    <string name="invalid_attendee">Invalid Attendee!</string>
    <string name="kit_welcome">Welcome to KIT!</string>
    <string name="input_attendee_information_below">Input Attendee Information Below</string>
    <string name="save">save</string>
    <string name="input_information">input information</string>
    <string name="clear_history">Clear history</string>
    <string name="login_with_password">Login with password</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="wrong_password">*Wrong password </string>
    <string name="scanning">Scanning</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="input_admin_password_to_confirm">Input admin password to confirm</string>
</resources>