<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kitclub.kiteventqrscanner.view.activities.SettingsActivity"
    android:background="@color/white">

    <include layout="@layout/toolbar"
        app:title="Settings"
        android:id="@+id/toolbar"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firebase_url"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/firebase_url_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:text="@string/url"
            android:hint="@string/url"
            android:inputType="textUri"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_parameters"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:id="@+id/require_text"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/required"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                android:layout_toStartOf="@id/spacer"

                />

            <View
                android:id="@+id/spacer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_action_add"
        android:contentDescription="@string/new_qr_param"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp" />

</RelativeLayout>