<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kitclub.kiteventqrscanner.view.activities.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:title="@string/app_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="#F2F2F2">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.camera.view.PreviewView>

        <ImageButton
            android:id="@+id/flash_toggle_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_flash_off"
            app:layout_constraintLeft_toLeftOf="@id/camera_preview"
            app:layout_constraintTop_toTopOf="@id/camera_preview" />

        <TextView
            android:id="@+id/connection_loss_warning_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/kit_yellow"
            android:gravity="center"
            android:text="@string/internet_connection_loss_warning"
            android:textColor="@color/kit_red"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            >
            <TextView
                android:id="@+id/scan_result_tv"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kit_welcome"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"

                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/blur_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#79000000"
        />


</RelativeLayout>

