<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/logo_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp"
        android:layout_marginStart="32dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/app_icon_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_launcher"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/app_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/kit_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@id/app_icon_img"
            android:layout_alignStart="@id/app_icon_img"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            />
    </RelativeLayout>



    <TextView
        android:id="@+id/label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo_panel"
        android:layout_marginTop="96dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:maxWidth="200dp"
        app:layout_constraintLeft_toLeftOf="@id/label_tv"
        app:layout_constraintTop_toBottomOf="@id/label_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:autofillHints="password"
        android:labelFor="@id/label_tv"/>

    <TextView
        android:id="@+id/warning_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/kit_red"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/password_edt"
        app:layout_constraintStart_toStartOf="@id/password_edt"
        android:layout_marginTop="8dp"
        android:text="@string/wrong_password"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/visible_password_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_visible_off"
        android:backgroundTint="#00000000"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@id/password_edt"
        app:layout_constraintTop_toTopOf="@id/password_edt"
        app:layout_constraintBottom_toBottomOf="@id/password_edt"
        android:layout_marginEnd="4dp"

        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/warning_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_background"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <RelativeLayout
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:elevation="8dp"

        >

        <ImageView
            android:id="@+id/kit_white_ic"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kit_white_ic"
            android:text="@string/app_name"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            android:textColor="@color/kit_blue"
            android:fontFamily="monospace"
            android:textStyle="bold"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>